<resources>
    <string name="app_name">WakeMe</string>
    <!--menu strings-->
    <string name="action_settings">Settings</string>
    <string name="action_motion_display">Motion Display</string>
    <string name="action_alarm_trigger">Alarm Trigger Test</string>

    <string name="title_activity_sleep_session">SleepSessionActivity</string>
    <string name="viewSleepSession">View Sleep Session</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_alarm_list">AlarmListActivity</string>

    <!--for fragment-->
    <string name="home">HOME</string>
    <string name="alarm_list">Alarm List</string>
    <string name="sleep_session">Sleep Session</string>
    <string name="welcome_text">Welcome to WakeMe!</string>
    <string name="sleepChartCaption">Dynamic plot of sleep movements shows states of sleep.</string>


    <string-array name="Alarms">
        <!-- bottled data for testing -->
        <item>Mon : 7:35 AM</item>
        <item>Mon : 10:00 PM</item>
        <item>Fri : 8:30 AM</item>
        <item>Sat : 10:00 AM</item>

    </string-array>
    <string name="title_activity_alarm_edit">AlarmEditActivity</string>
    <string name="removeButton">DELETE</string>
    <string name="title_activity_motion_display">Motion Display</string>
    <string name="title_activity_alarm_trigger">Alarm Trigger Test</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="but_lights_on">Lights On</string>
    <string name="but_lights_off">Lights Off</string>
    <string name="but_heat_wakeup">Heat Up</string>
    <string name="but_heat_sleeping">Heat Down</string>
    <string name="maker_key_text">Maker Channel Key</string>
    <string name="title_activity_service_example">ServiceExampleActivity</string>
    <string name="title_activity_service">ServiceActivity</string>

</resources>
