<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.amberyork.wakeme.AlarmTriggerActivity"
    tools:showIn="@layout/activity_alarm_trigger">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_lights_on"
        android:id="@+id/but_lights_on"
        android:layout_marginTop="86dp"
        android:layout_marginLeft="63dp"
        android:layout_marginStart="63dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="clickFunc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_lights_off"
        android:id="@+id/but_lights_off"
        android:layout_above="@+id/but_heat_sleeping"
        android:layout_alignRight="@+id/but_heat_sleeping"
        android:layout_alignEnd="@+id/but_heat_sleeping"
        android:onClick="clickFunc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_heat_wakeup"
        android:id="@+id/but_heat_wakeup"
        android:layout_alignTop="@+id/but_heat_sleeping"
        android:layout_toLeftOf="@+id/but_heat_sleeping"
        android:layout_toStartOf="@+id/but_heat_sleeping"
        android:onClick="clickFunc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_heat_sleeping"
        android:id="@+id/but_heat_sleeping"
        android:layout_below="@+id/but_lights_on"
        android:layout_toRightOf="@+id/but_lights_on"
        android:layout_toEndOf="@+id/but_lights_on"
        android:layout_marginTop="46dp"
        android:onClick="clickFunc" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/maker_key_text"
        android:width="255dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:text="change me" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Enter Maker Channel Key:"
        android:id="@+id/textView5"
        android:layout_below="@+id/but_heat_wakeup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp" />

</RelativeLayout>
